update more dependencies, ngx-bootstrap, ng2-select

--- a/src/app/widgets/about/about.component.html
+++ b/src/app/widgets/about/about.component.html
@@ -6,9 +6,9 @@
 
   <div id="aboutInfo" [style.right]="aboutInfoRight" [style.width]="aboutInfoWidth">
 
-    <p>gamma-sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
+    <p>Gamma-sky.net is an open-source and open-data webpage about the gamma-ray sky.</p>
 
-    <p>Read our full documentation <a href="https://github.com/gammapy/gamma-sky/wiki" target="_blank">here</a>. Also check out our <a href="http://aip.scitation.org/doi/abs/10.1063/1.4969002" target="_blank">Gamma 2016 conference proceeding</a>.</p>
+    <p>Read our full documentation <a href="https://github.com/gammapy/gamma-sky/wiki" target="_blank">here</a>. Also check out our <a href="http://aip.scitation.org/doi/abs/10.1063/1.4969002" target="_blank">Gamma2016 conference proceeding</a>.</p>
 
     <p>More coming soon!</p>
 
