--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -12,9 +12,9 @@
     >
       3FGL
     </button>
-    <!-- <button class='btn btn-primary' [(ngModel)]="selectedCatalog" btnRadio="3fhl" uncheckable (click)='setItems(items3FHL)'>
+    <button class='btn btn-primary' [(ngModel)]="selectedCatalog" btnRadio="3fhl" uncheckable (click)='setItems(items3FHL)'>
       3FHL
-    </button> -->
+    </button>
     <button class='btn btn-primary' [(ngModel)]="selectedCatalog" btnRadio="snrcat" uncheckable (click)='setItems(itemsSNRcat)'>
       SNRcat
     </button>
