configure source detail page; cleanup code

--- a/src/app/widgets/cat-help/cat-help.component.html
+++ b/src/app/widgets/cat-help/cat-help.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <p>
-      Catalog help: coming soon!
+      First select a catalog above, then type the source name in the search bar.
     </p>
     <p>
-        For now: just select a catalog and then a source above.
+      (In the future, we will include search by association and ra/dec coordinates.)
     </p>
 </div>
