--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -2,9 +2,13 @@
   <div class="container">
 
     <div class="col-md-4">
-        <h3>{{getSource().data.Source_Name}}</h3>
+        <h3>{{getSource().Source_Name}}</h3>
         <h5>Basic info: </h5>
         <ul>
+          <li>Source Name: {{getSource().Source_Name}}</li>
+        </ul>
+
+        <!-- <ul>
             <li>Source name: {{getSource().data.Source_Name}}</li>
             <li>ASSOC1: {{getSource().data.ASSOC1}}</li>
             <li>CLASS1: {{getSource().data.CLASS1}}</li>
@@ -19,17 +23,17 @@
         <h5>Spectral info:</h5>
         <ul>
             <li>TODO</li>
-        </ul>
+        </ul>-->
     </div>
 
     <div class="col-md-4">
       <h3>Lightcurve</h3>
-      <img src="{{getUrl(getSource().data.Source_Name, 'lc')}}" class="img-responsive" alt="Light curve" />
+      <img src="{{getUrl(getSource().Source_Name, 'lc')}}" class="img-responsive" alt="Light curve" />
     </div>
 
     <div class="col-md-4">
       <h3>Spectrum</h3>
-      <img src="{{getUrl(getSource().data.Source_Name, 'spec')}}" class="img-responsive" alt="Spectrum" />
+      <img src="{{getUrl(getSource().Source_Name, 'spec')}}" class="img-responsive" alt="Spectrum" />
     </div>
 
   </div>
