--- a/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
@@ -1,10 +1,10 @@
 <div *ngIf="(catalog)">
   <div class="container">
     <div class="col-md-6">
-      <h3>{{source.data.Source_Name}}</h3>
+      <h3>{{d.Source_Name}}</h3>
       <h5>Basic info: </h5>
       <ul>
-        <li>Source name: {{source.data.Source_Name}}</li>
+        <li>Source name: {{d.Source_Name}}</li>
       </ul>
     </div>
   </div>
