--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="(catalog)">
   <div class="container">
     <div class="col-md-6">
-      <h3>{{source.data.common_name}}</h3>
+      <h3>{{d.common_name}}</h3>
 
       <h5>Basic info</h5>
       <ul>
-        <li>Common name: {{source.data.common_name}}</li>
+        <li>Common name: {{d.common_name}}</li>
       </ul>
       <!-- <ul>
           <li>Common name: {{getSource().data.Source_Name}}</li>
