--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -12,12 +12,14 @@
         <!-- TODO: Combine the three above into one "Other names"? -->
         <li>Location: {{d.where}}</li>
         <li>Class: {{source.comma_space(d.classes)}}</li>
-        <br>
+      </ul>
+      <ul>
         <li>TeVCat name: {{d.tevcat_name}}
           (TeVCat ID: <a href={{source.get_tevcat_url()}} target='_blank'>{{d.tevcat_id}}</a>,
           TeVCat2 ID: <a href={{source.get_tevcat2_url()}} target="_blank">{{d.tevcat2_id}}</a>)</li>
         <li>TGeVCat name: {{d.tgevcat_name}} (ID: {{d.tgevcat_id}})</li>
-        <br>
+      </ul>
+      <ul>
         <li>Discoverer: {{d.discoverer}}</li>
         <li>Discovery date: {{d.discovery_date}}</li>
         <li>Seen by: {{source.comma_space(d.seen_by)}}</li>
@@ -65,13 +67,40 @@
       <ul>
         <li>Significance: {{source.format(d.significance, false)}}</li>
         <li>Livetime: {{source.format(d.livetime, false, 'h')}}</li>
-        <br>
       </ul>
-      <!-- <div id="spec" style="margin-top:-10px; margin-bottom:20px">
+
+      <div *ngIf=show_spec_pl()>
         <ul>
-          {{source.get_spec_parameters()}}
+          <li>Spectrum type: pl</li>
+          <li>norm: {{source.format_stat_sys(d.spec_pl_norm, d.spec_pl_norm_err, d.spec_pl_norm_err_sys, true, 'cm-2 s-1 TeV-1' )}}</li>
+          <li>index: {{source.format_stat_sys(d.spec_pl_index, d.spec_pl_index_err, d.spec_pl_index_err_sys, true)}}</li>
+          <li>reference: {{source.format(d.spec_pl_e_ref, true, 'TeV')}}</li>
         </ul>
-      </div> -->
+      </div>
+      <div *ngIf=show_spec_pl2()>
+        <ul>
+          <li>Spectrum type: pl2 (integral pl)</li>
+          <li>flux: {{source.format_stat_sys(d.spec_pl2_flux, d.spec_pl2_flux_err, d.spec_pl2_flux_err_sys, true, 'cm-2 s-1')}}</li>
+          <li>index: {{source.format_stat_sys(d.spec_pl2_index, d.spec_pl2_index_err, d.spec_pl2_index_err_sys, true)}}</li>
+          <li>e_min: {{source.format(d.spec_pl2_e_min, true, 'TeV')}}</li>
+          <li>e_max: {{source.format(d.spec_pl2_e_max, true, 'TeV')}}</li>
+        </ul>
+      </div>
+      <div *ngIf=show_spec_ecpl()>
+        <ul>
+          <li>Spectrum type: ecpl</li>
+          <li>norm: {{source.format_stat_sys(d.spec_ecpl_norm, d.spec_ecpl_norm_err, d.spec_ecpl_norm_err_sys, true, 'cm-2 s-1 TeV-1')}}</li>
+          <li>index: {{source.format_stat_sys(d.spec_ecpl_index, d.spec_ecpl_index_err, d.spec_ecpl_index_err_sys, true)}}</li>
+          <li>e_cut: {{source.format_stat_sys(d.spec_ecpl_e_cut, d.spec_ecpl_e_cut_err, d.spec_ecpl_e_cut_err_sys, true, 'TeV')}}</li>
+          <li>reference: {{source.format(d.spec_ecpl_e_ref, true, 'TeV')}}</li>
+        </ul>
+      </div>
+      <div *ngIf=no_spec()>
+        <ul>
+          <li>Spectral model not yet implemented.</li>
+        </ul>
+      </div>
+
       <ul>
         <li>energy range min: {{source.format(d.spec_erange_min, true, 'TeV')}}
         </li>
@@ -84,8 +113,8 @@
       </p>
       <ul>
         <li>Spectral model norm (1 TeV): {{source.format_error(d.spec_dnde_1TeV, d.spec_dnde_1TeV_err, true, 'cm-2 s-1 TeV-1 (stat.)')}}</li>
-        <li>Integrated flux (&lt;1 TeV): {{source.format_error(d.spec_flux_1TeV, d.spec_flux_1TeV_err, true, 'cm-2 s-1 (stat.)')}} </li>
-        <li>Integrated flux (&lt;1 TeV): {{source.format_error(d.spec_flux_1TeV_crab, d.spec_flux_1TeV_crab_err, true, 'cm-2 s-1 (crab units)')}}</li>
+        <li>Integrated flux (&gt;1 TeV): {{source.format_error(d.spec_flux_1TeV, d.spec_flux_1TeV_err, true, 'cm-2 s-1 (stat.)')}} </li>
+        <li>Integrated flux (&gt;1 TeV): {{source.format_error(d.spec_flux_1TeV_crab, d.spec_flux_1TeV_crab_err, true, '% crab')}}</li>
         <li>Integrated flux (1-10 TeV): {{source.format_error(d.spec_eflux_1TeV_10TeV, d.spec_eflux_1TeV_10TeV_err, true, 'erg cm-2 s-1')}} </li>
       </ul>
 
