--- a/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
@@ -14,7 +14,7 @@
       </ul>
       <ul>
         <li>Significance (10 GeV - 2 TeV): {{source.format(d.Signif_Avg, false)}}</li>
-        <li>Npred: {{source.format(d.Npred, true)}}</li>
+        <li>Predicted n. events in model: {{source.format(d.Npred, true)}}</li>
       </ul>
 
       <br>
@@ -51,7 +51,7 @@
         <li *ngIf=isLogParabola()>beta: {{source.format_error(d.beta, d.Unc_beta, false)}}</li>
         <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'GeV')}}</li>
         <li>Power law index: {{source.format_error(d.PowerLaw_Index, d.Unc_PowerLaw_Index, false)}}</li>
-        <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 GeV-1 s-1')}}</li>
+        <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 GeV-1')}}</li>
         <li>Integral flux (10 GeV - 1 TeV): {{source.format_error(d.Flux, d.Unc_Flux, true, 'cm-2 s-1')}}</li>
         <li>Energy flux (10 GeV - 1 TeV): {{source.format_error(d.Energy_Flux, d.Unc_Energy_Flux, true, 'erg cm-2 s-1')}}</li>
       </ul>
@@ -65,8 +65,7 @@
       <br>
       <h4><b>Other Info</b></h4>
       <ul>
-        <li>HEP energy: {{source.format(d.HEP_Energy, false, 'GeV')}}</li>
-        <li>HEP probability: {{source.format(d.HEP_Prob, false)}}</li>
+        <li>Highest energy photon: {{source.format(d.HEP_Energy, false, 'GeV')}} (Probability: {{source.format(d.HEP_Prob * 100, true)}}%)</li>
         <li>Bayesian Blocks: {{source.bayesian_blocks()}}</li>
         <li>Redshift: {{source.format(d.Redshift, false)}}</li>
         <li>NuPeak_obs: {{source.format(d.NuPeak_obs, true, 'Hz')}}</li>
