--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -1,5 +1,6 @@
 <div *ngIf="(catalog)">
   <div class="container">
+
     <div class="col-md-4">
         <h2>{{d.Source_Name}}</h2><br>
 
@@ -8,9 +9,73 @@
           <li>Source Name: {{d.Source_Name}}</li>
           <li>Extended name: {{d.Extended_Source_Name}}</li>
           <li>Associations: {{source.join_assoc()}}</li>
-          <li>Other names:</li>
+          <li>Other names: {{source.join_other_names()}}</li>
+          <li>Class: {{d.CLASS1}}</li>
+          <li>TeVCat flag: {{source.tevcat_flag()}}</li>
         </ul>
 
+        <br>
+        <h4><b>Position Info</b></h4>
+        <ul>
+          <li>RA: {{source.format(d.RAJ2000, false, 'deg')}}</li>
+          <li>DEC: {{source.format(d.DEJ2000, false, 'deg')}}</li>
+          <li>GLON: {{source.format(d.GLON, false, 'deg')}}</li>
+          <li>GLAT: {{source.format(d.GLAT, false, 'deg')}}</li>
+        </ul>
+        <ul>
+          <li>Semimajor (68%): {{source.format(d.Conf_68_SemiMajor, false, 'deg')}}</li>
+          <li>Semiminor (68%): {{source.format(d.Conf_68_SemiMinor, false, 'deg')}}</li>
+          <li>Position angle (68%): {{source.format(d.Conf_68_PosAng, false, 'deg')}}</li>
+          <li>Semimajor (95%): {{source.format(d.Conf_95_SemiMajor, false, 'deg')}}</li>
+          <li>Semiminor (95%): {{source.format(d.Conf_95_SemiMinor, false, 'deg')}}</li>
+          <li>Position angle (95%): {{source.format(d.Conf_95_PosAng, false, 'deg')}}</li>
+          <li>ROI number: {{d.ROI_num}}</li>
+        </ul>
+
+        <br>
+        <h4><b>Spectral Info</b></h4>
+        <ul>
+          <li>Spectrum type: {{d.SpectrumType}}</li>
+          <li>Significance (100 MeV - 300 GeV): {{source.format(d.Signif_Avg, false)}}</li>
+          <li>Significance curvature: {{source.format(d.Signif_Curve, true)}}</li>
+          <li *ngIf=isLogParabola()>Beta: {{source.format_error(d.beta, d.Unc_beta, false)}}</li>
+          <li *ngIf=isPLExpCutoff()>Cutoff energy: {{source.format_error(d.Cutoff, d.Unc_Cutoff, false, 'MeV')}}</li>
+          <li *ngIf=isPLSuperExpCutoff()>Exponential index: {{source.format_error(d.Exp_Index, d.Unc_Exp_Index, false)}}</li>
+          <li>Pivot energy: {{source.format(d.Pivot_Energy, true, 'MeV')}}</li>
+          <li>Power law index: {{source.format(d.PowerLaw_Index, false)}}</li>
+          <li>Spectral index: {{source.format_error(d.Spectral_Index, d.Unc_Spectral_Index, false)}}</li>
+          <li>Flux density at pivot energy: {{source.format_error(d.Flux_Density, d.Unc_Flux_Density, true, 'cm-2 s-1 MeV-1')}}</li>
+          <li>Integral flux (1 - 100 GeV): {{source.format_error(d.Flux1000, d.Unc_Flux1000, true, 'cm-2 s-1')}}</li>
+          <li>Energy flux (100 MeV - 100 GeV): {{source.format_error(d.Energy_Flux100, d.Unc_Energy_Flux100, true, 'erg cm-2 s-1')}}</li>
+        </ul>
+
+        <br>
+        <h4><b>Spectral Points</b></h4>
+        <p>
+          (To be implemented)
+        </p>
+
+        <br>
+        <h4><b>Lightcurve Info</b></h4>
+        <p>
+          Lightcurve measured in the energy band: 100 MeV - 100 GeV
+        </p>
+        <ul>
+          <li>Variability index: {{source.format(d.Variability_Index, false)}}</li>
+        </ul>
+        <div *ngIf=peakMeasured()>
+          <ul>
+            <li>Significance peak (100 MeV - 100 GeV): {{source.format(d.Signif_Peak, false)}}</li>
+            <li>Integral flux peak (100 MeV - 100 GeV): {{source.format_error(d.Flux_Peak, d.Unc_Flux_Peak, true, 'cm-2 s-1')}}</li>
+            <li>Time peak: {{source.format(d.Time_Peak, true, 's')}} (Mission elapsed time)</li>
+            <li>Peak interval: {{source.format(d.Peak_Interval, true, 's')}}</li>
+          </ul>
+        </div>
+        <div *ngIf=!(peakMeasured())>
+          <p>
+            No peak measured for this source.
+          </p>
+        </div>
 
     </div>
 
