--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h1 style="display:none">
-  gamma-sky.net<!-- This is used for our e2e testing. -->
+  gamma-sky.net
 </h1>
 
 <router-outlet></router-outlet>
