--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="col-md-4">
-        <h2>{{d.Source_Name}}</h2><br>
+        <h2 id='e2e-source-3fgl-name'>{{d.Source_Name}}</h2><br>
 
         <h4><b>Basic Info</b></h4>
         <ul>
