--- a/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fhl/cat-source-3fhl.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="(catalog)">
   <div class="container">
     <div class="col-md-6">
-      <h2>{{d.Source_Name}}</h2><br>
+      <h2 id='e2e-source-3fhl-name'>{{d.Source_Name}}</h2><br>
 
       <h4><b>Basic Info</b></h4>
       <ul>
