--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="(catalog)">
   <div class="container">
     <div class="col-md-6">
-      <h2>{{d.common_name}}</h2><br>
+      <h2 id='e2e-source-tev-name'>{{d.common_name}}</h2><br>
 
       <h4><b>Basic Info</b></h4>
       <ul>
