--- a/src/app/widgets/cat-search/cat-search.component.html
+++ b/src/app/widgets/cat-search/cat-search.component.html
@@ -54,13 +54,20 @@
   <h2>Angular2 Material:</h2>
 
   <md-input-container>
-     <input type="text" mdInput [formControl]="myControl" [mdAutocomplete]="auto">
+     <input type="text"
+            mdInput placeholder="Select source"
+            [formControl]="myControl"
+            [mdAutocomplete]="auto"
+      >
   </md-input-container>
 
   <md-autocomplete #auto="mdAutocomplete" [displayWith]="displayFn">
-     <md-option *ngFor="let option of filteredOptions | async" [value]="option" (onSelectionChange)="onSelected($event, option)">
-        {{ option.text }}
-     </md-option>
+      <md-option *ngFor="let option of filteredOptions | async"
+                 [value]="option"
+                 (onSelectionChange)="onSelected($event, option)"
+      >
+        {{ option.name }}
+      </md-option>
   </md-autocomplete>
 
   <div>
