--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -70,6 +70,7 @@
       </ul>
 
       <div *ngIf="show_spec_pl()">
+      <!-- <div [hidden]="!show_spec_pl()">  <=this might fix the bug also -->
         <ul>
           <li>Spectrum type: pl</li>
           <ul>
