make source id and catalog row index independent

--- a/src/app/widgets/cat-help/cat-help.component.html
+++ b/src/app/widgets/cat-help/cat-help.component.html
@@ -1,8 +1,11 @@
 <div class="container">
     <p>
-      First select a catalog above, then type the source name in the search bar.
+      Type a source name in the search bar above.
     </p>
     <p>
-      (In the future, we will include search by association and ra/dec coordinates.)
+      Querying through 4754 sources. See information for SNRcat sources on <a href="http://www.physics.umanitoba.ca/snr/SNRcat/" target="_blank">their website</a>.
+    </p>
+    <p>
+      (In the future, we will include search by association, class and ra/dec coordinates.)
     </p>
 </div>
