style detail-->popup button

--- a/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
+++ b/src/app/widgets/cat-source/cat-source-3fgl/cat-source-3fgl.component.html
@@ -4,8 +4,9 @@
     <div class="col-md-4">
         <h2 id='e2e-source-3fgl-name'>{{d.Source_Name}}</h2><br>
 
-        <button (click)="goToMap()">See source on map</button>
-        <br>
+        <button class='cat-detail-button' (click)="goToMap()">
+          See source on map
+        </button>
 
         <h4><b>Basic Info</b></h4>
         <ul>
