--- a/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
+++ b/src/app/widgets/cat-source/cat-source-tev/cat-source-tev.component.html
@@ -3,8 +3,9 @@
     <div class="col-md-6" *ngIf="(source)">
       <h2 id='e2e-source-tev-name'>{{d.common_name}}</h2><br>
 
-      <button (click)="goToMap()">See source on map</button>
-      <br>
+      <button class='cat-detail-button' (click)="goToMap()">
+        See source on map
+      </button>
 
       <h4><b>Basic Info</b></h4>
       <ul>
