--- a/src/app/widgets/button-share/button-share.component.html
+++ b/src/app/widgets/button-share/button-share.component.html
@@ -1,8 +1,20 @@
 <div (window:resize)="resize($event)">
 
-  <button id="shareButton" (click)="onClick($event)"
+  <button id="shareButton" (click)="openLink()"
   [style.right] = "shareButtonRight">
     <b>Share</b>
   </button>
+
+  <div id="shareLinkBox" [hidden]="!toggle">
+
+    <form id=shareLinkText>
+      <input id=shareLinkText type="text" value="{{urlString}}" (focus)="$event.target.select()">
+    </form>
+
+    <button id="closeShareLinkButton" (click)="closeLink()">
+      <b>Close</b>
+    </button>
+
+  </div>
 
 </div>
