add angular material dialog for about button too

--- a/src/app/views/map-view/map-view.component.html
+++ b/src/app/views/map-view/map-view.component.html
@@ -4,7 +4,7 @@
 
   <switch-view [selectedView]="selectedView"></switch-view>
 
-  <about></about>
+  <about-button></about-button>
 
   <share-button></share-button>
 
