--- a/src/app/widgets/share/share-button.component.html
+++ b/src/app/widgets/share/share-button.component.html
@@ -1,6 +1,6 @@
 <div (window:resize)="resize($event)">
 
-  <button id="shareButton" (click)="openLink()"
+  <button id="shareButton" (click)="onClick()"
   [style.right] = "shareButtonRight">
     <b>Share</b>
   </button>
