--- a/src/app/widgets/about/about.component.css
+++ b/src/app/widgets/about/about.component.css
@@ -12,7 +12,7 @@
   height: 30px;
 }
 
-#aboutInfo {
+/*#aboutInfo {
   position: absolute;
   width: 410px;
   bottom: 38px;
@@ -22,4 +22,4 @@
   background-color: white;
   opacity: 0.9;
   display: none;
-}
+}*/
